# GenAI_Custom_Real_Time_Personalized_Recommender

./: .env.example  .gitignore  LOCAL_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 1_feature_computing.ipynb  2_tp_training_retrieval_model.ipynb  3_tp_training_ranking_model.ipynb  4_ip_computing_item_embeddings.ipynb  5_ip_creating_deployments.ipynb  test.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/item_model/: fingerprint.pb  saved_model.pb
notebooks/item_model/variables/: variables.data-00000-of-00001  variables.index
notebooks/query_model/: fingerprint.pb  saved_model.pb
notebooks/query_model/variables/: variables.data-00000-of-00001  variables.index
recsys/: __init__.py  config.py
recsys/core/: __init__.py
recsys/data/: __init__.py
recsys/features/: README.md  __init__.py  articles.py  customers.py  embeddings.py  interaction.py  ranking.py  transactions.py
recsys/gcp/: __init__.py
recsys/gcp_integrations/: __init__.py  bq_utils.py  constants.py  embeddings.py  feature_store.py  model_registry.py  ranking_serving.py  schemas.py  two_tower_serving.py
recsys/raw_data_sources/: h_and_m_raw_data.py
recsys/training/: ranking.py  two_tower.py
recsys/utils/: README.md  __init__.py  data_utils.py  split_utils.py  validation.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+73 files in other folders)
